issue 822: Dr. Syscall DR Extension, part 10: top-level
Changes to drsyscall/drsyscall* cross-platform top-level code for operation
within the iterator-based framework and to implement the new queries in the
API:

+ Build with platform-specific files.
+ Shift SYSCALL_DRIVER option to drsys.
+ Link with ntdll, as I needed to shift the call to
  NtQueryInformationProcess into drsys for
  drsys_handle_is_current_process().
+ Added heap stat routine stubs to drmf_utils.c so drsyscall can be tracked
  by regular heap stats.
+ Added safe_read impl in drmf_utils.c.
+ Add parameter type names.
+ Implemented the various query routines for the API.
+ Updated unknown syscall handling to use passed-in functions for
  querying definedness and addressability.
+ Moved auxiliary library and other non-shadow code out of the framework.
+ Updated cstring handling to take in sysarg_iter_info_t* and to
  call report_memarg*().
+ Implemented the dynamic iterators.  They are stateful, relying on cached
  values in the pre-syscall event.  They use a sysarg_iter_info_t struct
  to pass information around.
+ Implemented syscall filters.
+ Added bb events to implement syscall gateway checking.
+ Added last-chance handling for the syscall driver to clean up
  after all iterations.  Changed the driver interface to work with
  this model.  However, I may not have resources to test this fully.
+ Updated the SYSARG_COMPLEX_TYPE types to use the same values
  as the expoted DRSYS_TYPE_ types, in most cases, for ease
  of providing types.
+ Ended up duplicating strcasestr in drmf_utils.c.

Not yet done: the static iterators.

SVN-Revision: 1123

--- a/drsyscall/CMakeLists.txt
+++ b/drsyscall/CMakeLists.txt
@@ -32,11 +32,32 @@ else()
   set(libtype SHARED)
 endif ()
 
+option(SYSCALL_DRIVER "use a kernel driver to identify system call writes")
+option(SYSCALL_DRIVER_SRCDIR "source dir of kernel driver")
+if (SYSCALL_DRIVER)
+  set(DEFINES ${DEFINES} -DSYSCALL_DRIVER)
+  include_directories(${SYSCALL_DRIVER_SRCDIR})
+endif (SYSCALL_DRIVER)
+
 set(srcs
-  drsyscall_drmf.c
+  drsyscall.c
   ../framework/version.c
   # add more here
   )
+
+if (UNIX)
+  set(srcs ${srcs}
+    drsyscall_linux.c
+    ../${asm_utils_src})
+else (UNIX)
+  set(srcs ${srcs} 
+    drsyscall_windows.c
+    drsyscall_wingdi.c)
+  if (SYSCALL_DRIVER)
+    set(srcs ${srcs} 
+      drmemory/syscall_driver.c)
+  endif (SYSCALL_DRIVER)
+endif (UNIX)
 
 # For the exported version, we don't want to print to stderr or raise
 # msgboxes, so we link in globals to suppress notification in drmf_utils.c.
@@ -58,6 +79,10 @@ set_target_properties(drsyscall PROPERTIES
 # a pain to export w/ the proper link rules.  But we at least use the
 # same flags and avoid compiling the same file differently.
 set_property(TARGET drsyscall PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
+target_link_libraries(drsyscall ${ntimp_lib})
+if (NOT USER_SPECIFIED_DynamoRIO_DIR AND "${CMAKE_GENERATOR}" MATCHES "Visual Studio")
+  add_dependencies(drsyscall ntimp_tgt)
+endif ()
 
 # We build a separate static target for internal use that has our
 # log/assert/notify infrastructure.
@@ -72,6 +97,10 @@ if (UNIX)
   append_property_string(TARGET drsyscall_int COMPILE_FLAGS "-fPIC")
 endif (UNIX)
 set_property(TARGET drsyscall_int PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
+target_link_libraries(drsyscall_int ${ntimp_lib})
+if (NOT USER_SPECIFIED_DynamoRIO_DIR AND "${CMAKE_GENERATOR}" MATCHES "Visual Studio")
+  add_dependencies(drsyscall_int ntimp_tgt)
+endif ()
 
 # Documentation is handled as part of the main tool docs processing.
 
